style(home-page): Fix character card is not centered with 1 column view

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -90,7 +90,7 @@ app-chara-image {
   z-index: 1;
   transition-property: z-index, top;
   transition-duration: 0.3s;
-  padding: 5%;
+  padding: 5% 0;
   cursor: pointer;
 
   width: 260px;
